@@ -32,8 +32,8 @@ Imports:
     scales,
     sjmisc (>= 1.8),
     sjstats (>= 0.2.0),
-    tibble,
-    tidyr (>= 0.4.1)
+    tibble (>= 1.1.0),
+    tidyr (>= 0.5.0)
 Suggests:
     AICcmodavg,
     arm,
